force-app/main/default/objects/Visit__c/fields/Actions_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Actions_Follow_Up__c</fullName>
    <label>Actions &amp; Follow Up</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>