force-app/main/default/objects/Visit__c/fields/Competitive_information__c.field-meta.xml
<CustomField>
    <fullName>Competitive_information__c</fullName>
    <label>Competitive information</label>
    <type>TextArea</type>
</CustomField>