force-app/main/default/objects/Visit__c/fields/Customer_attendee_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_attendee_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer attendee 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits (Customer attendee 1)</relationshipLabel>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>