force-app/main/default/objects/Visit__c/fields/Customer_attendee_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_attendee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer attendee 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits (Customer attendee 2)</relationshipLabel>
    <relationshipName>Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>