force-app/main/default/objects/Visit__c/fields/Customer_attendee_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_attendee_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer attendee 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits (Customer attendee 3)</relationshipLabel>
    <relationshipName>Visits3</relationshipName>
    <type>Lookup</type>
</CustomField>