force-app/main/default/objects/Visit__c/fields/Detailed_meeting_notes__c.field-meta.xml
<CustomField>
    <fullName>Detailed_meeting_notes__c</fullName>
    <label>Detailed meeting notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>