force-app/main/default/objects/Visit__c/fields/Goal_of_the_visit__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_the_visit__c</fullName>
    <label>Goal of the visit</label>
    <type>TextArea</type>
</CustomField>