force-app/main/default/objects/Visit__c/fields/Installed_Asset__c.field-meta.xml
<CustomField>
    <fullName>Installed_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>