force-app/main/default/objects/Visit__c/fields/Meeting_location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_location__c</fullName>
    <label>Meeting Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Location</fullName>
            </value>
            <value>
                <fullName>NX Filtration Location</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>