force-app/main/default/objects/Visit__c/fields/More_Customer_attendees__c.field-meta.xml
<CustomField>
    <fullName>More_Customer_attendees__c</fullName>
    <label>More Customer attendees</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>