force-app/main/default/objects/Visit__c/fields/More_NX_Filtration_attendees__c.field-meta.xml
<CustomField>
    <fullName>More_NX_Filtration_attendees__c</fullName>
    <label>More NX Filtration attendees</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>