force-app/main/default/objects/Visit__c/fields/NX_Filtration_attendee_2__c.field-meta.xml
<CustomField>
    <fullName>NX_Filtration_attendee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NX Filtration attendee 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>