force-app/main/default/objects/Visit__c/fields/NX_Filtration_attendee_3__c.field-meta.xml
<CustomField>
    <fullName>NX_Filtration_attendee_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NX Filtration attendee 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>