force-app/main/default/objects/Visit__c/fields/What_has_been_discussed__c.field-meta.xml
<CustomField>
    <fullName>What_has_been_discussed__c</fullName>
    <label>What has been discussed?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>