force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>Goal_of_the_visit__c</columns>
    <columns>Status__c</columns>
    <columns>Meeting_location__c</columns>
    <columns>Visit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>